HADOOP-15941. Addendum patch. Contributed by Takanobu Asanuma.